# Mod_Robots

./: .gitignore  CMakeLists.txt  CoordTensor.h  Lattice.cpp  Lattice.h  LocateAndFree_main.cpp  ModuleManager.cpp  ModuleManager.h  ModuleProperties.cpp  ModuleProperties.h  README.md  color_util.cpp  color_util.h  debug_util.h  lattice.cpp  lattice.h  main.cpp  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
3DTiler/: Index.html  settings.html
3DTiler/src/: 2dScreen.js  3dScreen.js  Cube.js  hexagon.js  rhomDod.js  sketch.js
Module Properties/: ColorProperty.json  OrientationProperty.json
Moves/: Monkey.json  Pivot.json
Moves-Disabled/: Catom.json  Slide.json
Test-Resources/: Color-Shuffle-3D_final.json  Color-Shuffle-3D_initial.json  Color-Shuffle_final.json  Color-Shuffle_initial.json  Heuristic-Checker_final.json  Heuristic-Checker_initial.json  Mixed-Modules_final.json  Mixed-Modules_initial.json  Orientation3D_final.json  Orientation3D_initial.json  Orientation_final.json  Orientation_initial.json  Rhombic-Color_final.json  Rhombic-Color_initial.json  Z-Pentomino_final.json  Z-Pentomino_initial.json
Test-Resources/Moves_ColorRestricted/: ColorRestrictedMoves.json
Test-Resources/Moves_Orientation/: PivotDrop.json  PivotOrientation.json
Test-Resources/Moves_Pivot/: Leapfrog.json
Test-Resources/Moves_Pivot+Slide/: Leapfrog.json
Test-Resources/Moves_Rhombic/: RhombicDodeca.json  RhombicDodecaMonkey.json
Test-Resources/Output/: output.txt
Visualization/: makefile
Visualization/Scenarios/: 2D_test_same_edit.scen  3d2rMeta.scen  3d3rMetaCandidate.scen  820.scen  Hanoi.scen  IllegalPivot.scen  LegalSlide.scen  LegalSlide_IllegalPivot.scen  Monkey.scen  RD_M.scen  RD_M_nomonkey.scen  SlidingTests.scen  metamodule.scen  onlypivot.scen  rd.scen  test.scen
Visualization/include/: Camera.hpp  Cube.hpp  Move.hpp  MoveSequence.hpp  ObjectCollection.hpp  Scenario.hpp  Shader.hpp
Visualization/include/glad/: glad.h
Visualization/resources/shaders/: fshader.glsl  vshader.glsl
Visualization/src/: Camera.cpp  Cube.cpp  Move.cpp  MoveSequence.cpp  ObjectCollection.cpp  Scenario.cpp  Shader.cpp  glad.c  main.cpp  setuputils.cpp  userinput.cpp
WebVis/: index.html
WebVis/Scenarios/: 2x2x2 Metamodule.scen  3x3 Metamodule Sub-case 1.scen  3x3 Metamodule Sub-case 2.scen  3x3 Metamodule Sub-case 3.scen  3x3 Metamodule.scen  Catom Example 2.scen  Catom Example.scen  Cube Example.scen  Parallel Monkey Move.scen  Parallel Move Example.scen  RD Example.scen  Slide Example.scen  socg2025-2.scen  socg2025.scen
WebVis/pathfinder/: Makefile  PathfinderModule.js  README.md  example_config.json  webmain.cpp
WebVis/pathfinder/Module Properties/: ColorProperty.json
WebVis/resources/shaders/: __Unused__vertex_shader.glsl  fshader_cube.glsl
WebVis/resources/textures/: RD.pdn  box.pdn  catom.pdn  catom_blank.pdn
WebVis/src/: '  GUI.js  Module.js  ModuleGeometries.js  ModuleMaterials.js  Move.js  MoveSet.js  MoveSetSequence.js  Pathfinder.js  Pathfinder.wasm  PathfinderWorker.js  Scenario.js  User.js  main.js  utils.js
cmake-free/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ColorPropertyLib.exp  ColorPropertyLib.lib  ColorPropertyLib.vcxproj  ColorPropertyLib.vcxproj.filters  LocateAndFree.vcxproj  LocateAndFree.vcxproj.filters  OrientationPropertyLib.exp  OrientationPropertyLib.lib  OrientationPropertyLib.vcxproj  OrientationPropertyLib.vcxproj.filters  Pathfinder.sln  Pathfinder.vcxproj  Pathfinder.vcxproj.filters  PropertyLib.exp  PropertyLib.vcxproj  PropertyLib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  copy_examples.vcxproj  copy_examples.vcxproj.filters  copy_moves.vcxproj  copy_moves.vcxproj.filters  copy_properties.vcxproj  copy_properties.vcxproj.filters  copy_resources.vcxproj  copy_resources.vcxproj.filters
cmake-free/ColorPropertyLib.dir/Debug/: .d.json  ColorPropertyLib.dll.recipe  ColorPropertyLib.ilk  color_util.cpp.module.json  colors.cpp.module.json
cmake-free/LocateAndFree.dir/Debug/: .d.json  LocateAndFree.exe.recipe  color_util.cpp.module.json  configurationspace.cpp.module.json  heuristiccache.cpp.module.json  isometry.cpp.module.json  lattice.cpp.module.json  latticesetup.cpp.module.json  locateandfree_main.cpp.module.json  modulemanager.cpp.module.json  movemanager.cpp.module.json  scenario.cpp.module.json  searchanalysis.cpp.module.json
cmake-free/Module Properties/: ColorProperty.json  OrientationProperty.json
cmake-free/OrientationPropertyLib.dir/Debug/: .d.json  OrientationPropertyLib.dll.recipe  OrientationPropertyLib.ilk  orientation.cpp.module.json
cmake-free/PropertyLib.dir/Debug/: .d.json  PropertyLib.dll.recipe  exports.def  moduleproperties.cpp.module.json  objects.txt
cmake-free/PropertyLib.dir/MinSizeRel/: objects.txt
cmake-free/PropertyLib.dir/RelWithDebInfo/: objects.txt
cmake-free/PropertyLib.dir/Release/: objects.txt
docs/examples/metamodules/: 2-by-2-metamodule.json  2_by_2_metamodule.txt  metamodule_1.txt
examples/metamodules/: 3_by_3_metamodule.json
examples/moves/3d-tiler/: 3Dtiles-final-0.json  3Dtiles-final-1.json  3Dtiles-initial-0.json  3Dtiles-initial-1.json
examples/moves/820/: 820_final.json
pathfinder/: LocateAndFree_main.cpp  Makefile  README.md
pathfinder/LocateAndFree/: LocateAndFree.cpp  LocateAndFree.h
pathfinder/coordtensor/: CoordTensor.h
pathfinder/lattice/: Lattice.cpp  Lattice.h  LatticeSetup.cpp  LatticeSetup.h
pathfinder/modules/: ModuleManager.cpp  ModuleManager.h  ModuleProperties.cpp  ModuleProperties.h
pathfinder/moves/: Isometry.cpp  Isometry.h  MoveManager.cpp  MoveManager.h  Scenario.cpp  Scenario.h
pathfinder/properties/: Colors.cpp  Colors.h  Orientation.cpp  Orientation.h
pathfinder/scripts/: generate.py  gui.py
pathfinder/search/: ConfigurationSpace.cpp  ConfigurationSpace.h  HeuristicCache.cpp  HeuristicCache.h  SearchAnalysis.cpp  SearchAnalysis.h
pathfinder/utility/: color_util.h
testing-robots/: final.json  initial.json  move4.scen  test_final.json  test_initial.json
(+96 files in other folders)
